# fraud-detection

./: .dockerignore  .env.example  .gitignore  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  docker-compose.yml  get_card_data.sh  mutmut.toml  pyproject.toml  requirements.txt  test.py
.dvc/: config
airflow/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  requirements-dev.txt
airflow/dags/: feature_pipeline.py
airflow/etl/: feature_etl.py
airflow/feature_store/: data_sources.py  feature_services.py  feature_store.yaml  feature_views.py
airflow/src/dags/: feature_pipeline.py
dataset/: training_data.parquet.dvc
docs/: AB Testing Demo.md  Centralize Secret Management.md  Deploy Drift Detection API.md  Deploy Fraud Detection API.md  Deploy Model Serving.md  Deploy Monitoring Stack.md  Deploy Prediction Writer.md  Install KEDA.md  Install Kserve.md
docs/design/: 01_data_generator.md  02_schema_design_example.md  03_data_generator_improvement.md  04.1_ml_design_example.md  05_on_demand_serving_features.md
docs/model/: inference_flow.md  train_flow.md
feature_store/: entities.py  feature_store.yaml  feature_views.py
infra/docker/: Dockerfile.api  Dockerfile.dailyRefresh  Dockerfile.dailyRefresher  Dockerfile.db-init  Dockerfile.driftDetection  Dockerfile.featureRefresher  Dockerfile.fraudDetection  Dockerfile.predictionWriter  docker-compose.yml
infra/docker/grafana/provisioning/dashboards/: dashboards.yml
infra/docker/grafana/provisioning/datasources/: postgres.yml
infra/k8s/: api-deployment.yaml
infra/k8s/helm/alloy/: Chart.yaml  NOTES.txt  values.yaml
infra/k8s/helm/alloy/templates/: cluster-role-binding.yaml  cluster-role.yaml  config-map.yaml  daemonset.yaml  service.yaml
infra/k8s/helm/daily_refresher/: Chart.yaml  NOTES.txt  README.md  values.yaml
infra/k8s/helm/daily_refresher/templates/: cronjob.yaml
infra/k8s/helm/drift_detection/: Chart.yaml  NOTES.txt  README.md  values.yaml
infra/k8s/helm/drift_detection/templates/: deployment.yaml  service.yaml
infra/k8s/helm/feature_refresher/: Chart.yaml  values.yaml
infra/k8s/helm/feature_refresher/templates/: deployment.yaml  scaled-object.yaml  trigger-authentication.yaml
infra/k8s/helm/fraud_detection/: Chart.yaml  NOTES.txt  README.md  values.yaml
infra/k8s/helm/fraud_detection/templates/: deployment.yaml  hpa.yaml  ingress.yaml
infra/k8s/helm/grafana/: values.yaml
infra/k8s/helm/grafana/dashboards/: ab-testing-dashboard.json  accumulated-requests-dashboard.json  drift-dashboard.json  main-dashboard.json  model-predictions-dashboard.json  prometheus-overview.json
infra/k8s/helm/loki/: Chart.yaml  NOTES.txt  values.yaml
infra/k8s/helm/loki/templates/: config-map.yaml  service-headless.yaml  (+2 more)
infra/k8s/helm/prediction_writer/: Chart.yaml  values.yaml
infra/k8s/helm/prometheus/: values.yaml
infra/k8s/helm/serving/: .helmignore  Chart.yaml  values.yaml
infra/k8s/helm/transaction_writer/: Chart.yaml  values.yaml
infra/k8s/manifests/: basic-auth-secret.yaml  cluster-secret-store.yaml  drift-detection-configmap.yaml  drift-detection-secrets.yaml  feature-refresher-configmap.yaml  fraud-detection-configmap.yaml  fraud-detection-secrets.yaml  grafana-admin-external-secret.yaml  grafana-secrets.yaml  kafka-configmap.yaml  prediction-writer-configmap.yaml  prediction-writer-secrets.yaml
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
models/: feature_importance.csv  feature_schema.json  metrics.json  model-settings.json  model.bst
notebooks/: model_training.ipynb
proof/: README.md  validation_verification.md
proof/clean_code/: clean_code.md
proof/validation_verification/: locust_report.html  validation_verification.md
scripts/: bootstrap_velocity_state.py  get_online_features.py  load_test_autoscale.py  mock_server.py  simulate_drift.py
scripts/initial/: generate_fake_data.py  init_historical_data.py  redis_features.py  simulate_transactions.py
scripts/training/: model_training.ipynb  retraining.py
src/: __init__.py
src/database/: __init__.py  postgres.py
src/drift_detection/: __init__.py  detector.py  main.py  repository.py  schemas.py  service.py
src/feature_store/: data_sources.py  feature_store.yaml  feature_views.py
src/fraud_detection/: __init__.py  settings.yaml
src/fraud_detection/core/: __init__.py  api.py  feature_store.py  models.py  predict.py  utils.py
src/fraud_detection/features/: __init__.py  feature_store.py  utils.py
src/fraud_detection/jobs/: daily_features_refresh.py  features_refresh.py
src/fraud_detection/workers/: refresh_redis_features_on_transaction.py  save_transaction.py
src/jobs/: daily_refresh.py
src/workers/: base_worker.py
src/workers/features/: redis_worker.py  utils.py
src/workers/postgres/: postgres_worker.py  utils.py
tests/: README.md  conftest.py  locust_load_test.py  test_api.py  test_core_utils.py  test_ep_bva.py  test_feature_store.py  test_features.py  test_models.py  test_performance_api.py  test_predict.py  test_property_based.py
(+9 files in other folders)
