[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.43.10",
    "fastapi==0.125.0",
    "lightgbm==4.6.0",
    "mlflow==3.12.0",
    "numpy==2.4.5",
    "pandas==2.3.3",
    "requests==2.34.2",
    "scikit-learn==1.8.0",
    "uvicorn==0.38.0",
    "google-cloud-storage==3.10.1",
    "redis==7.4.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "asyncpg>=0.31.0",
    "aiokafka>=0.14.0",
    "confluent-kafka>=2.14.2",
]

[dependency-groups]
dev = [
    "locust==2.44.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/fraud_detection"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
