[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.43.10",
    "fastapi==0.125.0",
    "lightgbm==4.6.0",
    "mlflow==3.12.0",
    "numpy==2.4.5",
    "pandas==2.3.3",
    "requests==2.34.2",
    "scikit-learn==1.8.0",
    "uvicorn==0.34.0",
    "google-cloud-storage==3.10.1",
    "redis==7.4.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "asyncpg>=0.31.0",
    "aiokafka>=0.14.0",
    "confluent-kafka>=2.14.2",
    "feast>=0.63.0",
    "psycopg[binary,pool]==3.3.4",
    "apache-airflow==3.0.*",
    "apache-airflow-providers-postgres>=6.8.0",
    "apache-airflow-providers-common-sql>=2.0.1",
    "sqlalchemy>=1.4.54",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "locust==2.44.0",
    "mutmut>=3.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/fraud_detection"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.mutmut]
# Mutate only the recently-changed code files (not the whole codebase per commit)
source_paths = [
    "src/fraud_detection/core/utils.py",
    "src/fraud_detection/core/api.py",
]
runner = "python -m pytest tests/ --ignore=tests/locust_load_test.py -x -q --tb=no --no-header"
pytest_add_cli_args_test_selection = ["tests/"]
